log
  File "/Users/xinst/work/db/hgtd_db/WriteSensor.py", line 51
    UT = CurrentTime
    ^
SyntaxError: invalid syntax
